<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Category" android:orientation="vertical">

    <TextView
            android:text="@string/apcs_quizlit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/title" android:textSize="60sp"
            android:textColorLink="@color/colorPrimaryDark" android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" android:layout_weight="1">
        <TextView
                android:text="@string/arithmetic_and_boolean_expressions"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/arith" android:textSize="18sp"
                android:textColorLink="@color/colorPrimaryDark" android:textColor="@color/colorPrimary"
                android:gravity="center_vertical|center_horizontal" android:layout_weight="1"/>
        <TextView
                android:text="@string/loops"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/loop"
                android:textSize="18sp"
                android:textColorLink="@color/colorPrimaryDark" android:textColor="@color/colorPrimary"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" android:layout_weight="1">
        <TextView
                android:text="@string/arrays"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/arr" android:textSize="18sp"
                android:textColorLink="@color/colorPrimaryDark" android:textColor="@color/colorPrimary"
                android:gravity="center_vertical|center_horizontal" android:layout_weight="1"/>
        <TextView
                android:text="@string/arraylist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/arrlst"
                android:textSize="18sp"
                android:textColorLink="@color/colorPrimaryDark" android:textColor="@color/colorPrimary"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" android:layout_weight="1"
            android:gravity="center_vertical|fill_horizontal">
        <TextView
                android:text="@string/strings"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/str" android:textSize="18sp"
                android:textColorLink="@color/colorPrimaryDark" android:textColor="@color/colorPrimary"
                android:gravity="center_vertical|center_horizontal" android:layout_weight="1"/>
        <TextView
                android:text="@string/classes_interfaces_inheritance_polymorphism"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/inheritance"
                android:textSize="18sp"
                android:textColorLink="@color/colorPrimaryDark" android:textColor="@color/colorPrimary"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" android:layout_weight="1"
            android:gravity="center_vertical|fill_horizontal">
        <TextView
                android:text="@string/fields_methods_and_parameter_passing"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/vars" android:textSize="14sp"
                android:textColorLink="@color/colorPrimaryDark" android:textColor="@color/colorPrimary"
                android:gravity="center_vertical|center_horizontal" android:layout_weight="1"/>
        <TextView
                android:text="@string/recursion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recursion"
                android:textSize="18sp"
                android:textColorLink="@color/colorPrimaryDark" android:textColor="@color/colorPrimary"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal">
        <TextView
                android:text="@string/algorithim_and_big_o"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/efficiency" android:textSize="14sp"
                android:textColorLink="@color/colorPrimaryDark" android:textColor="@color/colorPrimary"
                android:gravity="center_vertical|center_horizontal" android:layout_weight="1"/>
        <TextView
                android:text="@string/search_and_sort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/finding"
                android:textSize="18sp"
                android:textColorLink="@color/colorPrimaryDark" android:textColor="@color/colorPrimary"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>