<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Result"
        android:orientation="vertical">

    <TextView
            android:text="@string/Score"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="32sp"
            android:layout_height="366dp" android:id="@+id/scoreSlot"/>
    <Button
            android:text="@string/tryAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button2" android:onClick="tryagain"/>
    <Button
            android:text="@string/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button" android:onClick="returnToMenu"/>
</LinearLayout>